# tedx-bknd

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
accounts/: permissions.py  urls.py
accounts/registration/: register_user.py
auth/: urls.py
auth/azure/: callback.py  login.py
config/: settings.py  urls.py
events/: admin.py  models.py  urls.py
events/migrations/: 0001_initial.py  0002_event_ticket_rate.py  0002_event_total_seats.py  0003_remove_event_total_seats.py
events/views/: get_all_events.py
payment/: admin.py  models.py  urls.py
payment/migrations/: 0001_initial.py  0002_initial.py
payment/views/: get_all_payment.py  make_payment.py  verify_payment.py
tickets/: admin.py  models.py
tickets/migrations/: 0001_initial.py  0002_initial.py
tickets/views/: create_tickets.py
users/: admin.py  models.py  urls.py
users/helpers/: get_user_by_id.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_user_role.py
users/views/: register_user.py  view_all_users.py
