[project]
name = "tedx-bknd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==4.2.*",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.1.0",
    "msal>=1.35.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
]
